Use `.collect(Collectors.toList())` instead of `.toList()` because we need a mutable collection.